@@ -1,5 +1,7 @@
 === HEAD
 
+* Add Dataset#group_append, for appending to the existing GROUP BY clause (YorickPeterse) (#1047)
+
 * Add inverted_subsets plugin, for creating an inverted subset method for each subset (celsworth) (#1042)
 
 * Make Dataset#for_update not use the :read_only database when the dataset is executed (jeremyevans) (#1041)
